--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         .button {  
             display: inline-block;  
             padding: 10px 20px;  
-            background-color: #3498db;  
+            background-color: #347adb;  
             color: #fff;  
             text-decoration: none;  
             border-radius: 5px;  
@@ -50,7 +50,7 @@
             background-color: #2980b9;  
         }  
     </style>  
-</head>  
+</head>   
 <body>  
     <div class="container">  
         <img src="B33C087DE3E35E797BDB5FE6F7C50FDA.png" alt="物品名称" class="image" />  
@@ -59,7 +59,8 @@
             <p>马首铜像，十二生肖兽首铜像之一，原本是圆明园海晏堂外的喷泉的一部分，铸造于清朝乾隆年间 。
                 1860年英法联军侵入北京，圆明园惨遭劫掠并遭焚毁，马首铜像与其他11尊兽首铜像一同流失海外。2007年9月，港澳知名企业家、爱国人士何鸿燊斥资6910万港币购得圆明园马首铜像。 2019年11月，为庆祝中华人民共和国成立70周年和澳门回归20周年，何鸿燊将圆明园马首铜像正式捐赠中华人民共和国国家文物局。 
                 2019年11月13日，文化和旅游部、国家文物局在中国国家博物馆举行圆明园马首铜像捐赠仪式 。2020年12月1日，马首铜像正式回归圆明园</p>   
-            <a href="#" class="button">返回首页</a>  
+            <a href="#" class="button">返回首页</a>
+            <a href="index1.html" class="button">观后小问题</a> 
         </div>  
     </div>  
 </body>  
