--- a/index.html
+++ b/index.html
@@ -22,10 +22,40 @@
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);  
             overflow: hidden;  
         }  
-        .image {  
-            width: 100%;  
-            height: auto;  
-        }  
+        .slider {
+            width: 800px;
+            height: 400px;
+            overflow: hidden;
+            position: relative;
+            border-radius: 10px;
+            }
+
+        .slider-wrapper {
+            display: flex;
+            width: 300%;
+            animation: slide 25s infinite;
+            }
+
+        .slider-wrapper img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            }
+
+        @keyframes slide {
+            0% {
+                transform: translateX(0);
+            }
+            33.33% {
+                transform: translateX(-100%);
+            }
+            66.66% {
+                transform: translateX(-200%);
+            }
+            100% {
+                transform: translateX(0);
+            }
+            } 
         .content {  
             padding: 20px;  
         }  
@@ -53,7 +83,13 @@
 </head>   
 <body>  
     <div class="container">  
-        <img src="B33C087DE3E35E797BDB5FE6F7C50FDA.png" alt="物品名称" class="image" />  
+        <div class="slider">
+            <div class="slider-wrapper">
+              <img src="马首1.png" alt="Image 1">
+              <img src="马首2.png" alt="Image 2">
+              <img src="马首3.png" alt="Image 3">
+            </div>
+        </div>  
         <div class="content">  
             <h1>马首</h1>  
             <p>马首铜像，十二生肖兽首铜像之一，原本是圆明园海晏堂外的喷泉的一部分，铸造于清朝乾隆年间 。
